k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finops-agent-deployment
  labels:
    app: finops-agent
spec:
  # High Availability: Run 3 identical copies of our AI Dashboard across different servers!
  replicas: 3
  selector:
    matchLabels:
      app: finops-agent
  template:
    metadata:
      labels:
        app: finops-agent
    spec:
      containers:
      - name: finops-agent
        image: finops-agent:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
        
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8501
          initialDelaySeconds: 15
          periodSeconds: 20
